# gwebgl

./: .gitignore  README.md  cdemo.c  demo.js  get-uniform.c  jsconfig.json  meson.build  mkycmflags  rundemo.sh
demo/: app.js  main.js
gjs_src/: WebGLRenderingContext.js  WebGLRenderingContextBase.js
gjs_src/demo/: gl-matrix.js  main.js  webgl-demo.js
gjswrappers/: wglrc-base.js  wglrc.js
gwebglgtk/: gwebglgtk.c  gwebglgtk.h
js/: cat-types.js  class-builder.js  fileio.js  iface-parser.js  sys.js  webgl-to-gles.js
js/gic/: README.md  class-header.js  class-impl.js  generator.js  get-uniform.js  get-vert-attr.js  gpixbuf.js  handle-classes.js  handle-types.js  invocation.js  main.js  multi-getter.js  name-tx.js  overloads.js  pkg-header.js  result-buffers.js  shader-source.js  sig-proc.js  types.js
ref/: Canvas.d.ts  WebGL2RenderingContextBase.d.ts  WebGL2RenderingContextOverloads.d.ts  WebGLContextAttributes.d.ts  WebGLRenderingContextBase.d.ts  WebGLRenderingContextOverloads.d.ts
tests/: gic-header.js  gic-impl.js  iface-parser.js
